# python-pyenv-template

./: .envrc  .pre-commit-config.yaml  pyproject.toml
src/: __init__.py
