[tool.poetry]
name = "TODO"
version = "0.0.0"
description = "TODO"
authors = ["Steven Kalt <kalt.steven@gmail.com>"]
license = "TODO"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
mypy = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
